--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,17 @@
 <!--index.wxml-->
 <view class="container">
+  <header>
+    <view>test</view>
+  </header>
+  <button
+    type="primary"
+    size="{{defaultSize}}"
+    loading="{{loading}}"
+    plain="{{plain}}"
+    disabled="{{disabled}}"
+    bindtap="default"
+    hover-class="other-button-hover"
+  >primary</button>
   <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
     <block wx:else>
